# cfar_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  parameter_map.txt
Analysis/: AUV_FLS_ptn_2025.ipynb  Height_Map.ipynb  Height_Map_2.ipynb  pcd_image.ipynb  playback.py  save_image.py  thresholding.ipynb
Analysis/Oculus_reader/: oculusread_example.py
Analysis/Oculus_reader/utils/: nb_viewing_tools.py  watercol_to_cartesian_transforms.py
Analysis/Oculus_reader/utils/oculus_utils/: read_oculusping.py  visualize_oculusping.py
cfg/: config.yaml
include/: cfar.h
launch/: launch.py
msg/: CfarInfo.msg
src/: cfar.cpp  cfar_node.cpp  edge_cases.cpp  generate_map.py  main.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
